nav scroll and js is-visible animation

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <nav class="navigation" id="nav">
                 <ul>
                     <li><a href="#shop">Shop</a></li>
-                    <li><a href="#on-sale">On Sale</a></li>
                     <li><a href="#new-arrivals">New Arrivals</a></li>
-                    <li><a href="#brands">Brands</a></li>
+                    <li><a href="#top-selling">Top Selling</a></li>
+                    <li><a href="#style">Style</a></li>
                 </ul>
             </nav>
 
@@ -36,7 +36,7 @@
         </div>
     </header>
 
-    <section class="hero-section">
+    <section class="hero-section" id="shop">
         <div class="body-image">
             <div class="body-picture"><img src="images/body_picture.png" alt="" class="hero-background"></div>
             <div class="big-star"><img src="images/big_star.png" alt=""></div>
@@ -78,7 +78,7 @@
 
     <section>
         <div class="scroll-wrapper">
-            <div class="new-arrivals-box">
+            <div class="new-arrivals-box fade-in-on-scroll" id="new-arrivals">
                 <div class="title-new-arrivals">NEW ARRIVALS</div>
 
                 <div class="new-arrivals">
@@ -171,7 +171,7 @@
                 </div>
             </div>
         </div>
-        <div class="view-all-parent">
+        <div class="view-all-parent fade-in-on-scroll">
             <div class="view-all"><button>View All</button></div>
         </div>
 
@@ -180,7 +180,7 @@
         <div class="line2-div"></div>
 
     <section>
-        <div class="top-selling-box">
+        <div class="top-selling-box fade-in-on-scroll" id="top-selling">
             <div class="title-top-selling">TOP SELLING</div>
             <div class="top-selling">
                 <div class="clothes-box">
@@ -270,14 +270,14 @@
             </div>
         </div>
 
-        <div class="view-all-parent">
+        <div class="view-all-parent fade-in-on-scroll">
             <div class="view-all"><button>View All</button></div>
         </div>
 
     </section>
 
     <section>
-        <div class="browse-by-dress-parent-box">
+        <div class="browse-by-dress-parent-box fade-in-on-scroll" id="style">
             <div class="browse-by-dress-title">BROWSE BY DRESS STYLE</div>
             <div class="box-links">
                 <div class="casual-and-formal">
@@ -293,7 +293,7 @@
     </section>
 
     <section>
-        <div class="our-happy-customers">
+        <div class="our-happy-customers fade-in-on-scroll">
             <div class="title-and-arrows">
                 <div class="our-happy-customers-title">OUR HAPPY CUSTOMERS</div>
                 <div class="arrows">
@@ -302,7 +302,7 @@
                 </div>
             </div>
 
-            <div class="revisions">
+            <div class="revisions fade-in-on-scroll">
                 <div class="revision-first-box">
                     <div class="revision-inside-box">
                         <div class="stars">
@@ -361,7 +361,7 @@
     </section>
 
     <section>
-        <div class="footer-bottom-box">
+        <div class="footer-bottom-box fade-in-on-scroll">
             <div class="footer-top-box">
                 <div class="footer-top-title">STAY UPTO DATE ABOUT OUR LATEST OFFERS</div>
                 <div class="email-and-button">
