responsive 600-480px and 480-320px done | build test

--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
                 </div>
             </div>
         </div>
+        <div class="small-image"><img src="images/body_picture_small.png" alt=""></div>
+        <div class="small-star-big"><img src="images/small_star_big.png" alt=""></div>
+        <div class="small-star-small"><img src="images/small_star_small.png" alt=""></div>
     </section>
 
     <section>
