getting policy with fetch | build test

--- a/userAccount.html
+++ b/userAccount.html
@@ -80,7 +80,7 @@
             </div>
         </div>
     </div>
-
+    <div class="policy-container"></div>
     <script src="script.js"></script>
 </body>
 
